[package]
name = "yubiwallet-wasm"
version = "0.1.1"
edition = "2024"
authors = ["xiongchenyu6 <xiongchenyu6@gmail.com>"]
description = "WASM bindings for YubiWallet's chain-independent logic (address derivation, EVM signature recovery) — for wallet integrators. Signing itself requires the native host."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stars-labs/yubiwallet"
readme = "README.md"
keywords = ["yubikey", "wallet", "ethereum", "solana", "wasm"]
categories = ["wasm", "cryptography::cryptocurrencies"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Chain-independent logic only (no pcsc / no card I/O).
yubiwallet = { path = "../yubiwallet", default-features = false }
wasm-bindgen = "0.2"
hex = "0.4"
bs58 = "0.5"
# Enable the JS backend so k256's transitive getrandom compiles for wasm32.
getrandom = { version = "0.4", features = [] }
