[package]
name = "yubiwallet"
version = "0.3.1"
edition = "2024"
authors = ["xiongchenyu6 <xiongchenyu6@gmail.com>"]
description = "Seedless multi-chain hardware wallet on a YubiKey — sign Solana, Ethereum, Sui and Bitcoin with keys that never leave the device"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stars-labs/yubiwallet"
keywords = ["yubikey", "wallet", "solana", "ethereum", "hardware"]
categories = ["cryptography", "authentication", "hardware-support"]
# Shell-based hardware test suite isn't part of the published crate.
exclude = ["multichain-tests/"]

[lib]
name = "yubiwallet"
path = "src/lib.rs"

# The CLI binary needs PC/SC access (the `card` feature).
[[bin]]
name = "yubiwallet"
path = "src/main.rs"
required-features = ["card"]

[features]
default = ["card"]
# `card` = talk to the YubiKey over PC/SC (and build the CLI). Disable it to
# build only the chain-independent logic (address derivation, signature
# recovery) — e.g. for a wasm package — without the pcsc native dependency.
card = ["dep:pcsc", "dep:clap", "dep:bs58", "dep:base64"]

[dependencies]
# Always available — chain-independent logic, wasm-friendly:
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.12"
hex = "0.4"
thiserror = "2.0"
# Card / CLI only:
pcsc = { version = "2.7.0", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
bs58 = { version = "0.5.1", optional = true }
base64 = { version = "0.22", optional = true }

# Used only by the example signers / hardware test suite. The Solana example is
# SDK-free (std-only JSON-RPC + manual tx) — solana-sdk 4.x is intentionally not
# a dependency (its solana-keypair/five8 combo is broken upstream, and it pulls a
# huge tree). Ethereum uses alloy (the maintained successor to ethers, on modern
# reqwest/rustls/ring); Sui/Bitcoin use small encoding crates.
[dev-dependencies]
alloy = { version = "2.0", features = ["consensus", "network", "providers", "transport-http", "reqwest-rustls-tls", "rpc-types"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.11"
blake2 = "0.10"
ripemd = "0.2"
bech32 = "0.12"
